# NIX

./: .gitignore  README.md  json_validator.py  main.py  pyproject.toml
docs/: schema.json
src/: json_validator.py
tests/: test_json_validator.py  test_parsers.py
