[project]
name = "nix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jsonschema>=4.25.1",
    "lxml>=6.0.2",
    "playwright>=1.56.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
]

[pytest]
testpaths = ["tests"]
